################################################################################
# Copyright (c) 2012 Los Alamos National Security, LLC
# All rights reserved.
################################################################################

#------------------------------------------------------------------------------#
# Initialize autoconf
#------------------------------------------------------------------------------#

AC_INIT(phaze, beta.0.1, bergen@lanl.gov)
AC_CONFIG_AUX_DIR(config)

VERSION_INFORMATION="beta.0.1"
AC_SUBST(VERSION_INFORMATION)

#------------------------------------------------------------------------------#
# Initialize automake
#------------------------------------------------------------------------------#

AM_INIT_AUTOMAKE

#------------------------------------------------------------------------------#
# Configuration targets
#------------------------------------------------------------------------------#

AC_CONFIG_FILES([Makefile \
	lib/Makefile \
	bin/Makefile
])

#------------------------------------------------------------------------------#
# Program options
#------------------------------------------------------------------------------#

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

#------------------------------------------------------------------------------#
# Output
#------------------------------------------------------------------------------#

AC_OUTPUT
