################################################################################
# Copyright (c) 2012 Los Alamos National Security, LLC
# All rights reserved.
################################################################################

#------------------------------------------------------------------------------#
# General Settings
#------------------------------------------------------------------------------#

lib_LTLIBRARIES = libphz.la

AM_CPPFLAGS = -I${top_srcdir}/src

libphz_includedir = ${includedir}

#------------------------------------------------------------------------------#
# Headers
#------------------------------------------------------------------------------#

libphz_include_HEADERS = \
	${top_srcdir}/src/phaze.h \
	${top_srcdir}/src/phztypes.h

#------------------------------------------------------------------------------#
# Headers
#------------------------------------------------------------------------------#

libphz_la_SOURCES = \
	${top_srcdir}/src/phaze.c
